Button Color Change

--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
             <br><br>
             Throughout my studies, I focused complementing my soft skills with hands-on/prototyping skills. 
             I developed my CAD, FEA, and hand on tools during co-op, serving as the main CAD/FEA engineer on my capstone group and authoring a machining 101 manual for electrical and software engineers at my last co-op.
+            I have also taken an interest in programming and self taught myself website programming, I am in the process of learning data analysis with Python.
             <br><br>
             
         </P>
