--- a/List_Of_Projects.html
+++ b/List_Of_Projects.html
@@ -23,18 +23,30 @@
         <div class="project-grid">
             <div class="project">
                 <h3> Independent - This Website </h3>
+                <figure>
+                    <img class="icon" src="photos/Icons/portfolio-icon.JPG">
+                </figure>
                 <a class="link-button" href="Projects/portfolio.html"> Learn More </a>
             </div>
             <div class="project">
                 <h3> Academic - Capstone Project</h3>
+                <figure>
+                    <img class="icon" src="photos/Icons/CAP-Icon.jpg">
+                </figure>
                 <a class="link-button" href="Projects/capstone.html"> Learn More </a>
             </div>
             <div class="project">
                 <h3> Academic - ANSYS Engine Block</h3>
+                <figure>
+                    <img class="icon" src="photos/Icons/Engine-Icon.JPG">
+                </figure>
                 <a class="link-button" href="Projects/engine-block.html"> Learn More </a>
             </div>
             <div class="project">
                 <h3> Independent - Click 2.0 </h3>
+                <figure>
+                    <img class="icon" src="photos/Icons/Click-Icon.jpg">
+                </figure>
                 <a class="link-button" href="Projects/click-2.0.html"> Learn More </a>
             </div>
             <div class="project">
@@ -43,10 +55,16 @@
             </div>
             <div class="project">
                 <h3> Academic - PC Watercooler Project</h3>
+                <figure>
+                    <img class="icon" src="photos/Icons/CAD-Icon.jpg">
+                </figure>
                 <a class="link-button" href="Projects/CAD-PC.html"> Learn More </a>
             </div>
             <div class="project">
                 <h3> Emphysys Co-op - Customer Electronic Handpiece </h3>
+                <figure>
+                    <img class ="icon" src="photos/Icons/Emphy-Icon.png">
+                </figure>
                 <a class="link-button" href="Projects/EmphysysCoOp.html"> Learn More </a>
             </div>
             <div class="project">
