--- a/Projects/click-2.0.html
+++ b/Projects/click-2.0.html
@@ -25,11 +25,11 @@
                 </h1>
                 <p class="subtitle">
                     Online gaming rules strictly state it is illegal to use software to perform in-game tasks.
-                    But what if it was hardward doing the actions ? Click 1.0 was born to click a mouse. <br> <br>
+                    But what if it was hardware doing the actions ? Click 1.0 was born to click a mouse. <br> <br>
 
                     Click 2.0 aims to add 2-D movement to the mouse in addition to reworking the clicking mechanism 
                     <br><br>
-                    *On pause until I can obtain a dedicated DC power supply*
+                    *On pause until I can obtain a dedicated DC power supply to match current draws from stepper motors*
                 </p>
             </div>
             <figure class="cover">
@@ -66,10 +66,6 @@
                     <li> An identified need for a dedicated PSU as the USB slot cannot supply consistent amps needed to operate
                         stepper motors </li>
                 </ul>
-                <figure>
-                    <img class="cover" src="../photos/Click-2.JPG">
-                    <figcaption> Refined CAD model to be printed </figcaption>
-                </figure>
                 <a class ="link-button" href="https://github.com/HapisaurusRex/Click-2.0" target="_blank"> Monitor Click 2.0 Software Dev Here</a>
             </div>
 
