Updates 1 out of 2

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
         <div id="intro">
             <h1> Hi I'm Daniel Shah </h1>
-            <h3> a mechanical engineer, self-taught coder, and amateur chef</h3>
+            <h3> a mechanical engineer, polyglot, and amateur chef</h3>
         </div>
     </body>
 </html>
