--- a/about.html
+++ b/about.html
@@ -23,15 +23,15 @@
             <figcaption></figcaption>
         </figure>
         <p class="clean">
-            I am a mechanical engineering student at Northeastern University, finishing in May 2022. 
-            I grew up in several continents (not Antarctica) and learned how to be a team player through trial and error. 
-            The most important lesson is that there are many ways to solve a problem and you should always include perspectives outside of personal paradigms if possible.
+            Recent mechanical engineering graduate from Northeastern University, passionate about creating tools and tech that help people everyday. 
+            I currently work at Amazon Web Services on their dash cart product aimed at letting people skip the checkout line.
             <br><br>
-            Throughout my studies, I focused complementing my soft skills with hands-on/prototyping skills. 
-            I developed my CAD, FEA, and hand on tools during co-op, serving as the main CAD/FEA engineer on my capstone group and authoring a machining 101 manual for electrical and software engineers at my last co-op.
-            I have also taken an interest in programming and self taught myself website programming, I am in the process of learning data analysis with Python.
+            Thanks to my parents being traveling health scientists, I have gotten to experience a wide array of cultures on four continents growing up. Rapidly adapting to my environment, I strive to always be a team player wherever I am.  
+            I recognize that there are many perspectives outside of my own paradigm and always try to accommodate them. They are key to approaching problems from a different angle. 
             <br><br>
-            
+            Throughout my studies, I developed my hands-on/prototyping skills. Having developed CAD, FEA, and machine shop tools during co-op, I served as the head prototype and CAD engineer during my capstone project.
+            I have recently taken an interest in programming, and am hoping to develop a solid foundation in the near future.
+            <br><br>
         </P>
     </body>
 </html>
