--- a/List_Of_Projects.html
+++ b/List_Of_Projects.html
@@ -20,8 +20,8 @@
         </header>
 
         <h2 class="headliner"> chronological order (from left to right)</h2>
-        <div class="project-grid">
-            <div class="project">
+        <div class="project-grid" >
+          <!-- <div class="project"> 
                 <h3> Independent - This Website </h3>
                 <figure>
                     <img class="icon" src="photos/Icons/portfolio-icon.JPG">
@@ -70,8 +70,10 @@
             <div class="project">
                 <h3> Academic - Overseer </h3>
                 <a class="link-button" href="Projects/overseer.html"> Learn More </a>
-            </div>
+            </div>  --> 
         </div>
+
+        <script type="module" src="./js/listOfProjects.js"></script>
 
 
     </body>
