--- a/index.html
+++ b/index.html
@@ -1,26 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title> Hi I'm Dan </title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">    
+        <title> Hi I'm Daniel </title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
         <header>
-            <nav>
-                <a class = "page selected" href="index.html"> daniel shah </a>
-                <ul class="nav-links">
-                    <li class="nav-links"><a class = "page" href= "about.html"> about me </a>              </li>
-                    <li class="nav-links"><a class = "page" href="List_Of_Projects.html"> projects </a>    </li>
-                    <li class="nav-links"><a class = "page" href="contact.html"> contact </a>           </li>
-                </ul>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand nav-title page desc-text" href="index.html"> Daniel Shah </a>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                        <a class = "nav-link nav-button page" href= "about.html"> about me </a>
+                        <a class = "nav-link nav-button page" href="List_Of_Projects.html"> projects </a> 
+                        <a class = "nav-link nav-button page" href="contact.html"> contact </a>  
+                        </div>
+                    </div>
+                </div>
             </nav>
         </header>
-        <div id="intro">
-            <h1> Hi I'm Daniel Shah </h1>
-            <h3> a mechanical engineer, polyglot, and amateur chef</h3>
+        <div class="container" id="content">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="/photos/Banner.jpg" id= "pfp" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <div id="bio">
+                        <div class="title-text">
+                            Hiya I'm Daniel Shah <br>
+                            Pardon the mess ! We're remodelling ! <br>
+                            (Estimated completion: March 26th 2025)
+                        </div>
+                        <div class="desc-text">
+                            Currently: Completing my Masters in Computer Science at Columbia University
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
