--- a/project-page.html
+++ b/project-page.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
     <title>Project</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <header>
-      <nav>
-        <a class="page" href="../index.html"> daniel shah </a>
-        <ul class="nav-links">
-          <li class="nav-links">
-            <a class="page" href="about.html"> about me </a>
-          </li>
-          <li class="nav-links">
-            <a class="page selected" href="List_Of_Projects.html"> projects </a>
-          </li>
-          <li class="nav-links">
-            <a class="page" href="contact.html"> contact </a>
-          </li>
-        </ul>
+      <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="container-fluid">
+              <a class="navbar-brand nav-title page desc-text" href="index.html"> Daniel Shah </a>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                  <div class="navbar-nav">
+                  <a class = "nav-link nav-button page" href= "about.html"> about me </a>
+                  <a class = "nav-link nav-button page" href="List_Of_Projects.html"> projects </a> 
+                  <a class = "nav-link nav-button page" href="contact.html"> contact </a>  
+                  </div>
+              </div>
+          </div>
       </nav>
-    </header>
+  </header>
 
     <div class="summary-grid">
       <div class="headliner">
