--- a/List_Of_Projects.html
+++ b/List_Of_Projects.html
@@ -1,42 +1,77 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">   
         <title> Projects </title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand nav-title page desc-text" href="index.html"> Daniel Shah </a>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                        <a class = "nav-link nav-button page" href= "about.html"> about me </a>
-                        <a class = "nav-link nav-button page" href="List_Of_Projects.html"> projects </a> 
-                        <a class = "nav-link nav-button page" href="contact.html"> contact </a>  
-                        </div>
-                    </div>
-                </div>
+            <nav>
+                <a class = "page" href="index.html"> daniel shah </a>
+                <ul class="nav-links">
+                    <li class="nav-links"><a class = "page" href= "about.html"> about me </a>              </li>
+                    <li class="nav-links"><a class = "page selected" href="List_Of_Projects.html"> projects </a>    </li>
+                    <li class="nav-links"><a class = "page" href="contact.html"> contact </a>           </li>
+                </ul>
             </nav>
         </header>
-        <body>
-            <div class="container">
-                <div class="row">
-                     <div class="col-md-12 heading-text">
-                        chronological order (from left to right)
-                     </div>
-                </div>
-                <div id="project-gallery" class="row">
 
-                </div>
+        <h2 class="headliner"> chronological order (from left to right)</h2>
+        <div class="project-grid" >
+          <!-- <div class="project"> 
+                <h3> Independent - This Website </h3>
+                <figure>
+                    <img class="icon" src="photos/Icons/portfolio-icon.JPG">
+                </figure>
+                <a class="link-button" href="Projects/portfolio.html"> Learn More </a>
             </div>
-
-            
-        </body>
-        
+            <div class="project">
+                <h3> Academic - Capstone Project</h3>
+                <figure>
+                    <img class="icon" src="photos/Icons/CAP-Icon.jpg">
+                </figure>
+                <a class="link-button" href="Projects/capstone.html"> Learn More </a>
+            </div>
+            <div class="project">
+                <h3> Academic - ANSYS Engine Block</h3>
+                <figure>
+                    <img class="icon" src="photos/Icons/Engine-Icon.JPG">
+                </figure>
+                <a class="link-button" href="Projects/engine-block.html"> Learn More </a>
+            </div>
+            <div class="project">
+                <h3> Independent - Click 2.0 </h3>
+                <figure>
+                    <img class="icon" src="photos/Icons/Click-Icon.jpg">
+                </figure>
+                <a class="link-button" href="Projects/click-2.0.html"> Learn More </a>
+            </div>
+            <div class="project">
+                <h3> Academic - PC Watercooler Project</h3>
+                <figure>
+                    <img class="icon" src="photos/Icons/CAD-Icon.jpg">
+                </figure>
+                <a class="link-button" href="Projects/CAD-PC.html"> Learn More </a>
+            </div>
+            <div class="project">
+                <h3> Emphysys Co-op - Customer Electronic Handpiece </h3>
+                <figure>
+                    <img class ="icon" src="photos/Icons/Emphy-Icon.png">
+                </figure>
+                <a class="link-button" href="Projects/EmphysysCoOp.html"> Learn More </a>
+            </div>
+            <div class="project">
+                <h3> Independent - 1967 Pontiac GTO Restoration </h3>
+                <a class="link-button" href="Projects/GTO.html"> Learn More</a>
+            </div>
+            <div class="project">
+                <h3> Academic - Overseer </h3>
+                <a class="link-button" href="Projects/overseer.html"> Learn More </a>
+            </div>  --> 
+        </div>
 
         <script type="module" src="./js/listOfProjects.js"></script>
 
