Worked on about and project sections
Not yet done, but it's alot closer to 'good enough'. Reworked about me such that it better reflects me currently and tried a project layout.

Attempted to decipher and improve .js files

--- a/about.html
+++ b/about.html
@@ -24,23 +24,36 @@
         </header>
         <div class="container" id="content">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-7 desc-text about-container">
+                    <div>
+                        <span class="heading-text">Hey there !</span>
+                        <br>
+                        <br>
+                        I’m a Computer Science master’s student at Columbia University with a background in mechanical engineering. Although I’m currently based in New York City, I grew up in Geneva, Switzerland. 
+                        <br><br>
+                        Whether at AWS or Collins Aerospace, I’ve consistently thrived in roles that had me on the move—jumping between teams, collaborating with a wide range of people, and providing first-look analysis on technical problems. I’m exceptionally comfortable in fast-paced, cross-functional environments where clear communication, planning ahead, and quick thinking matter just as much as technical depth.
+                        <br><br>
+                        With a foundation in two STEM disciplines, I bring a hardcoded analytical mindset to every challenge. But I also live by the Feynman principle:
+                        <div style="font-style: italic; text-align: center; margin: 1rem 0;">
+                            If I can’t explain it clearly, I don’t understand it well enough.
+                        </div>
+                        I currently demonstrate this in my coursework. My lecture notes often become go-to study guides, thanks to how I structure background context to make the main idea come more naturally to readers. 
+                    </div> 
+                       
+                </div>
+                <div class="col-md-5">
                     <figure>
-                        <img class="img-fluid" src="photos/about-1.jpg">
+                        <img id="pfp" class="img-fluid" src="photos/about-1.jpg">
                         <figcaption></figcaption>
                     </figure>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12">
-                    Recent mechanical engineering graduate from Northeastern University, passionate about creating tools and tech that help people everyday. 
-            I currently work at Amazon Web Services on their dash cart product aimed at letting people skip the checkout line.
-            <br><br>
-            Thanks to my parents being traveling health scientists, I have gotten to experience a wide array of cultures on four continents growing up. Rapidly adapting to my environment, I strive to always be a team player wherever I am.  
-            I recognize that there are many perspectives outside of my own paradigm and always try to accommodate them. They are key to approaching problems from a different angle. 
-            <br><br>
-            Throughout my studies, I developed my hands-on/prototyping skills. Having developed CAD, FEA, and machine shop tools during co-op, I served as the head prototype and CAD engineer during my capstone project.
-            I have recently taken an interest in programming, and am hoping to develop a solid foundation in the near future
+                <div class="col-md-6">
+                    Interests:
+                </div>
+                <div class="col-md-6">
+                    Hobbies:
                 </div>
             </div>
         </div>
