--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                 
                     <div id="contact-info">
                         <div>
-                            <button class="contact-title">
+                            <button class="contact-button contact-title">
                                 Contact info
                             </button>
                         </div>
