--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </header>
         <div class="container" id="content">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-xs-12 col-md-4">
                     <img src="/photos/Banner.jpg" id= "pfp" class="img-fluid">
                 </div>
-                <div class="col-md-8">
+                <div class="col-xs-12 col-md-8">
                     <div id="bio">
                         <div class="title-text">
                             Hiya I'm Daniel Shah <br>
@@ -35,7 +35,9 @@
                             (Estimated completion: March 26th 2025)
                         </div>
                         <div class="desc-text">
-                            Currently: Completing my Masters in Computer Science at Columbia University
+                            Computer Science Student @ Columbia University
+                            <br>
+                            Based in: New York, NY, USA
                         </div>
                     </div>
                 </div>
