Changed home page
Obviously getting involved in other stuff made me put this on the back burner. Added a date to avoid confusion.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div class="title-text">
                             Hiya I'm Daniel Shah <br>
                             Pardon the mess ! We're remodelling ! <br>
-                            (Estimated completion: March 26th 2025)
+                            (Getting round to finishing it after graduation)
                         </div>
                         <div class="desc-text">
                             Computer Science Student @ Columbia University
